WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276080
ReportingObserverCallbacks can leak the Document object
https://bugs.webkit.org/show_bug.cgi?id=276080
Summary
ReportingObserverCallbacks can leak the Document object
Ryan Reno
Reported
2024-07-01 11:05:49 PDT
ReportingObserverCallback is a JSC::Strong handle. So if the callback captures the document, directly or indirectly, it will leak the document object.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-01 11:06:01 PDT
<
rdar://problem/130908426
>
Ryan Reno
Comment 2
2024-07-01 11:12:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30351
EWS
Comment 3
2024-07-01 16:32:33 PDT
Committed
280557@main
(33c1f1877fa2): <
https://commits.webkit.org/280557@main
> Reviewed commits have been landed. Closing PR #30351 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug