Cherry-pick 280557@main (33c1f1877fa2). https://bugs.webkit.org/show_bug.cgi?id=276080

ReportingObserverCallbacks can leak the Document object
    https://bugs.webkit.org/show_bug.cgi?id=276080
    rdar://130908426

    Reviewed by Ryosuke Niwa.

    By default callbacks are held as JSC::Strong handles. This creates a GC
    Root which will keep anything captured in the callback function alive.
    On sites like britannica.com, many documents are captured in this way
    and lead to memory leaks.

    This patch makes ReportingObserverCallback Weak and keeps the callback
    wrapper alive via ReportingObserver's visitAdditionalChildren.

    * LayoutTests/fast/reporting/reporting-observer-callback-does-not-leak-expected.txt: Added.
    * LayoutTests/fast/reporting/reporting-observer-callback-does-not-leak.html: Added.
    * LayoutTests/fast/reporting/resources/reporting-observer-with-callback.html: Added.
    * Source/WebCore/Modules/reporting/ReportingObserver.cpp:
    (WebCore::ReportingObserver::callbackConcurrently):
    * Source/WebCore/Modules/reporting/ReportingObserver.h:
    * Source/WebCore/Modules/reporting/ReportingObserver.idl:
    * Source/WebCore/Modules/reporting/ReportingObserverCallback.h:
    * Source/WebCore/Modules/reporting/ReportingObserverCallback.idl:
    * Source/WebCore/Sources.txt:
    * Source/WebCore/WebCore.xcodeproj/project.pbxproj:
    * Source/WebCore/bindings/js/JSReportingObserverCustom.cpp: Added.
    (WebCore::JSReportingObserver::visitAdditionalChildren):

    Canonical link: https://commits.webkit.org/280557@main

Canonical link: https://commits.webkit.org/274313.418@webkitglib/2.44